--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 </head>
 <body>
 	<textarea id="input" type="textarea" rows=15, cols=80 spellcheck="false">
+# Haber process
+
+$\ce{ N2 + 3H2 ->[Fe][200atm, 400 \degree C] 2NH3 }$
+
 # Maxwell's Equations
 
 
