support small screen in 'index.html'

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<script defer src="./browser.js" type="module"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.2/katex.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.1.0/github-markdown.css"/>
 	<style>
@@ -55,5 +57,4 @@ $\nabla \times \vec{\mathbf{B}} -\, \frac1c\, \frac{\partial\vec{\mathbf{E}}}{\p
 	<button id="button">Mathdown!</button>
 	<div id="output" class="markdown-body"></div>
 	<!-- <script src="./bundle.js"></script> -->
-	<script src="./browser.js" type="module"></script>
 </body>
